--- a/ffmpeg-rpi-audio/PKGBUILD
+++ b/ffmpeg-rpi-audio/PKGBUILD
@@ -10,7 +10,7 @@
 _pkgname=ffmpeg
 pkgname=ffmpeg-rpi-audio
 pkgver=6.1.1
-pkgrel=1
+pkgrel=2
 epoch=1
 pkgdesc='The FFmpeg minimal audio toolkit optimized for headless raspberry pi systems'
 arch=('x86_64' 'armv7h' 'aarch64')
@@ -20,10 +20,9 @@ depends=(
   bzip2
   gnutls
   lame
-  libbs2b.so
+  libbs2b
   libsoxr
   libvorbis
-  libvorbisenc.so
   opus
   xz
   zlib
@@ -43,7 +42,6 @@ provides=(
   libpostproc.so
   libswresample.so
   ffmpeg
-  ffmpeg-archphile
 )
 conflicts=('ffmpeg')
 replaces=(
@@ -67,7 +65,6 @@ prepare() {
 
 pkgver() {
   cd ${_pkgname}
-
   git describe --tags | sed 's/^n//'
 }
 
@@ -121,5 +118,11 @@ build() {
 }
 
 package() {
+  depends+=(
+    libbs2b.so
+    libvorbisenc.so
+    libvorbis.so    
+  )
+
   make DESTDIR="${pkgdir}" -C ffmpeg install install-man
 }
