--- a/snapcast/PKGBUILD
+++ b/snapcast/PKGBUILD
@@ -4,9 +4,10 @@
 # Contributor: Bart De Vries <bart at mogwai dot be>
 
 pkgname=snapcast
-_pkgname_snapos=snapos
-pkgver=0.27.0
-pkgrel=4
+pkgver=0.28.0
+pkgrel=1
+_pkgname_snapweb=snapweb
+_snapweb_version=0.7.0
 pkgdesc="Synchronous multi-room audio player"
 arch=('x86_64' 'armv7h' 'aarch64')
 url="https://github.com/badaix/snapcast"
@@ -19,76 +20,82 @@ depends=(
   opus
   expat
   libsoxr
+  libpulse
 )
 optdepends=(
-  'python-websocket-client: stream plugin script'
-  'python-mpd2: stream plugin script'
-  'python-musicbrainzngs: stream plugin script'
+  "python-websocket-client: stream plugin script"
+  "python-websocket-client: stream plugin script"
+  "python-musicbrainzngs: stream plugin script"
 )
 makedepends=(
+  cmake
   alsa-utils
   boost
-  cmake
 )
 install="snapcast.install"
-backup=(
-  'etc/default/snapserver'
-  'etc/default/snapclient'
-  'etc/snapserver.conf'
-)
+backup=('etc/default/snapserver' 'etc/default/snapclient' 'etc/snapserver.conf')
 source=("${pkgname}-${pkgver}.tar.gz::https://github.com/badaix/snapcast/archive/v${pkgver}.tar.gz"
-        "snapos-${pkgver}.tar.gz::https://github.com/badaix/snapos/archive/v${pkgver}.tar.gz"
+        "${_pkgname_snapweb}-${_snapweb_version}.zip::https://github.com/badaix/snapweb/releases/download/v${_snapweb_version}/snapweb.zip"
         "snapcast.sysusers"
         "snapcast.tmpfiles"
         "snapcast.install")
-sha256sums=('c662c6eafbaa42a4797a4ed6ba4a7602332abf99f6ba6ea88ff8ae59978a86ba'
-            '5f4f59dd6f39059c22687b29231e2c007a7d0ea0f920af6092f18eeba9a5e208'
+noextract=("${_pkgname_snapweb}-${_snapweb_version}.zip")
+sha256sums=('7911037dd4b06fe98166db1d49a7cd83ccf131210d5aaad47507bfa0cfc31407'
+            '2acfc3538e4f4daefb0a2eac9126925f5a455dfd68b14ba5500fac5f1f82cb8f'
             '9fe6e9e07adb77f555a617b772e6d01e098e1dfaad1e8075e03a7d7ba76141de'
             'e8c3441c4ca646a9b66d61355e90862fd3481562ae3b4e0a4bc1c978464ae2c7'
-            '87945989ce215c3720e12e9d53642d7b1112f8276cd02d999fd7e27517aea126')
+            '23a0390774279f8c5d02d3307cfb67f2e9360f42704bb4f13d8c43e091fe997f')
+
+prepare() {
+    mkdir -p ${_pkgname_snapweb}-${_snapweb_version}
+    bsdtar -xf ${_pkgname_snapweb}-${_snapweb_version}.zip -C ${_pkgname_snapweb}-${_snapweb_version}
+}
 
 build() {
-  cd "${pkgname}-${pkgver}"
-  cmake -B build -S . \
-        -DCMAKE_BUILD_TYPE=None \
-        -DCMAKE_INSTALL_PREFIX=/usr \
-        -Wno-dev
-  cmake --build build
+    cd "${pkgname}-${pkgver}"
+    cmake -B build -S . \
+          -DCMAKE_BUILD_TYPE=None \
+          -DCMAKE_INSTALL_PREFIX=/usr \
+          -Wno-dev
+    cmake --build build
 }
 
 package() {
-  cd "${pkgname}-${pkgver}"
+    cd "${pkgname}-${pkgver}"
 
-  install -Dm755 bin/snapserver "${pkgdir}/usr/bin/snapserver"
-  install -Dm644 server/snapserver.1 "${pkgdir}/usr/share/man/man1/snapserver.1"
-  install -Dm644 server/etc/snapserver.conf "${pkgdir}/etc/snapserver.conf"
+    install -Dm755 bin/snapserver "${pkgdir}/usr/bin/snapserver"
+    install -Dm644 server/snapserver.1 "${pkgdir}/usr/share/man/man1/snapserver.1"
+    install -Dm644 server/etc/snapserver.conf "${pkgdir}/etc/snapserver.conf"
+    # install snapweb
+    for file in ${srcdir}/${_pkgname_snapweb}-${_snapweb_version}/*\.*;
+        do install -Dm 644 ${file} -t "${pkgdir}/usr/share/snapserver/snapweb/";
+    done
+    for file in ${srcdir}/${_pkgname_snapweb}-${_snapweb_version}/assets/*\.*;
+        do install -Dm 644 ${file} -t "${pkgdir}/usr/share/snapserver/snapweb/assets/";
+    done
+    for file in server/etc/plug-ins/*\.*;
+        do install -Dm 644 ${file} -t "${pkgdir}/usr/share/snapserver/plug-ins/";
+    done
 
-  # install snapweb
-  for file in server/etc/snapweb/*\.*;
-    do install -Dm 644 ${file} -t "${pkgdir}/usr/share/snapserver/snapweb/";
-  done
-  for file in server/etc/snapweb/3rd-party/*\.*;
-    do install -Dm 644 ${file} -t "${pkgdir}/usr/share/snapserver/snapweb/3rd-party/";
-  done
-  for file in server/etc/plug-ins/*\.*; 
-      do install -Dm 644 ${file} -t "${pkgdir}/usr/share/snapserver/plug-ins/"; 
-  done
+    install -Dm755 bin/snapclient "${pkgdir}/usr/bin/snapclient"
+    install -Dm644 client/snapclient.1 "${pkgdir}/usr/share/man/man1/snapclient.1"
 
-  install -Dm755 bin/snapclient "${pkgdir}/usr/bin/snapclient"
-  install -Dm644 client/snapclient.1 "${pkgdir}/usr/share/man/man1/snapclient.1"
+    install -Dm644 extras/package/debian/snapserver.service "${pkgdir}/usr/lib/systemd/system/snapserver.service"
+    install -Dm644 extras/package/debian/snapserver.default "${pkgdir}/etc/default/snapserver"
+    install -Dm644 extras/package/debian/snapclient.service "${pkgdir}/usr/lib/systemd/system/snapclient.service"
+    install -Dm644 extras/package/debian/snapclient.default "${pkgdir}/etc/default/snapclient"
 
-  install -Dm644 ${srcdir}/${_pkgname_snapos}-${pkgver}/debian/snapserver.service "${pkgdir}/usr/lib/systemd/system/snapserver.service"
-  install -Dm644 ${srcdir}/${_pkgname_snapos}-${pkgver}/debian/snapserver.default "${pkgdir}/etc/default/snapserver"
-  install -Dm644 ${srcdir}/${_pkgname_snapos}-${pkgver}/debian/snapclient.service "${pkgdir}/usr/lib/systemd/system/snapclient.service"
-  install -Dm644 ${srcdir}/${_pkgname_snapos}-${pkgver}/debian/snapclient.default "${pkgdir}/etc/default/snapclient"
+    install -Dm644 "${srcdir}/snapcast.sysusers" "${pkgdir}/usr/lib/sysusers.d/snapclient.conf"
+    install -Dm644 "${srcdir}/snapcast.tmpfiles" "${pkgdir}/usr/lib/tmpfiles.d/snapclient.conf"
 
-  install -Dm644 "${srcdir}/snapcast.sysusers" "${pkgdir}/usr/lib/sysusers.d/snapclient.conf"
-  install -Dm644 "${srcdir}/snapcast.tmpfiles" "${pkgdir}/usr/lib/tmpfiles.d/snapclient.conf"
+    # install documentation
+    install -d "${pkgdir}/usr/share/doc/${pkgname}/control"
+    cp -R doc/* "${pkgdir}/usr/share/doc/${pkgname}/"
+    install -Dm644 "changelog.md" "${pkgdir}/usr/share/doc/${pkgname}"
 
-  # install documentation
-  install -d "${pkgdir}/usr/share/doc/${pkgname}"
-  cp -R doc/* "${pkgdir}/usr/share/doc/${pkgname}/"
+    find "${pkgdir}"/usr/share/doc/${pkgname} -type f -exec chmod 0644 {} \;
+    find "${pkgdir}"/usr/share/doc/${pkgname} -type d -exec chmod 0755 {} \;
 
-  find "${pkgdir}"/usr/share/doc/${pkgname} -type f -exec chmod 0644 {} \;
-  find "${pkgdir}"/usr/share/doc/${pkgname} -type d -exec chmod 0755 {} \;
+    # example control scripts
+    cp -R control/* "${pkgdir}/usr/share/doc/${pkgname}/control/"
 }
