--- a/mpd-sima/PKGBUILD
+++ b/mpd-sima/PKGBUILD
@@ -6,28 +6,36 @@
 # Contributor: Vincent Berset <msieurhappy [at] gmail [dot] com>
 
 pkgname=mpd-sima
-_pkgname=MPD_sima
+_pkgname=sima
 pkgver=0.18.2
-pkgrel=2
+pkgrel=3
 pkgdesc="Automagically add title to mpd playlist based on last.fm recomendations"
 arch=('x86_64' 'armv7h' 'aarch64')
 url="http://kaliko.me/mpd-sima/"
 license=('GPL')
-depends=('python>=3.2' 'python-musicpd>=0.4.1' 'python-requests>=2.4.0')
+depends=(
+  'python>=3.2' 
+  'python-musicpd>=0.4.1' 
+  'python-requests>=2.4.0'
+  'python-build'
+  'python-installer'
+)
 makedepends=('python-setuptools')
-source=("https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/${_pkgname}/${_pkgname}-${pkgver}.tar.gz" "service")
-sha256sums=('a6be39c5cdb0373debe4564820e0f306894de924600353a39045b5aa00bf9cd1'
+source=("https://gitlab.com/kaliko/${_pkgname}/-/archive/0.18.2/${_pkgname}-0.18.2.tar.gz" "service")
+sha256sums=('c98940eb0eb041178e3a98df7c34f34e39c19017ad6eaaa06a5e8ec096555644'
             '864b997cbf53864120aba183f2642ad6a632a0bcde3c4701779cc9a25cc0f448')
 
 prepare() {
   sed 's/multi-user.target/default.target/;/User=%i/d' service > user.service
 }
 
-package() {
-  cd "${srcdir}/MPD_sima-${pkgver}"
-  /usr/bin/env python setup.py install --prefix=/usr --root="$pkgdir" || return 1
-
-  # Install systemd service
-  install -Dm644 "${srcdir}"/service "${pkgdir}"/usr/lib/systemd/system/mpdsima@.service
-  install -Dm644 "${srcdir}"/user.service "${pkgdir}"/usr/lib/systemd/user/mpdsima.service
+build() {
+  cd "${_pkgname}-${pkgver}"
+  python -m build --wheel --no-isolation
 }
+
+package() {
+  cd "${_pkgname}-${pkgver}"
+  python -m installer --destdir="$pkgdir" dist/*.whl
+}
+
