--- a/ffmpeg-rpi-audio/PKGBUILD
+++ b/ffmpeg-rpi-audio/PKGBUILD
@@ -9,7 +9,7 @@
 
 _pkgname=ffmpeg
 pkgname=ffmpeg-rpi-audio
-pkgver=7.0.1
+pkgver=7.0.2
 pkgrel=1
 epoch=1
 pkgdesc='The FFmpeg minimal audio toolkit optimized for headless raspberry pi systems'
@@ -49,11 +49,11 @@ replaces=(
   ffmpeg
   ffmpeg-archphile
 )
-_tag=47f70eda3e2ff003a787e512afd07b0c266f7a70
+_tag=a18b979d17fa169a6f93c5be8732533c8e06337d
 source=(
   git+https://git.ffmpeg.org/ffmpeg.git?signed#tag=${_tag}
 )
-b2sums=('SKIP')
+b2sums=('bcc0fb367d2822665f0918292a0cf581e0119d6ba6d2e3d0b6e794b6f74d30c118b5c47e26b5687473f01b346f8ec7e885f80729ce6115e18003b2371ff4553f')
 validpgpkeys=(DD1EC9E8DE085C629B3E1846B18E8928B3948D64) # Michael Niedermayer <michael@niedermayer.cc>
 
 prepare() {
@@ -108,7 +108,6 @@ build() {
     --enable-libsoxr \
     --enable-libvorbis \
     --enable-lto \
-    --enable-mbedtls \
     --enable-parser=aac,ac3,flac,opus,vorbis \
     --enable-shared \
     --enable-version3
