--- a/ffmpeg-rpi-audio/PKGBUILD
+++ b/ffmpeg-rpi-audio/PKGBUILD
@@ -10,7 +10,7 @@
 _pkgname=ffmpeg
 pkgname=ffmpeg-rpi-audio
 pkgver=7.1
-pkgrel=1
+pkgrel=2
 epoch=1
 pkgdesc='The FFmpeg minimal audio toolkit optimized for headless raspberry pi systems'
 arch=('x86_64' 'armv7h' 'aarch64')
@@ -94,7 +94,7 @@ build() {
     --enable-decoder=pcm_u16be,pcm_u16le \
     --enable-decoder=pcm_u24be,pcm_u24le \
     --enable-decoder=pcm_u32be,pcm_u32le \
-    --enable-demuxer=aac,ac3,dts,flac,mp3 \
+    --enable-demuxer=aac,ac3,dts,flac,mov,mp3 \
     --enable-demuxer=pcm_alaw,pcm_mulaw \
     --enable-demuxer=pcm_f32be,pcm_f32le,pcm_f64be,pcm_f64le \
     --enable-demuxer=pcm_s16be,pcm_s16le,pcm_s24be,pcm_s24le,pcm_s32be,pcm_s32le \
