--- a/cava/PKGBUILD
+++ b/cava/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Celestial Walrus <aur at celestial dot cf>
 
 pkgname=cava
-pkgver=0.10.3
-pkgrel=2
+pkgver=0.10.4
+pkgrel=1
 pkgdesc='Console-based Audio Visualizer for Alsa'
 arch=('x86_64' 'armv7h' 'aarch64')
 url='https://github.com/karlstav/cava'
@@ -30,8 +30,8 @@ makedepends=(
   'autoconf'
   'libpipewire'
 )
-source=("$pkgname-$pkgver.tar.gz::https://github.com/karlstav/cava/releases/download/0.10.3/${pkgname}-${pkgver}.tar.gz")
-sha512sums=('15fa550da266d3d4b917da0e6b5611bd7b82e5d30d15e3d728b0e3d5a92387787156e3e32f632f68b9c5e217a023bc2b3ca4ffd48ac6e03be1519ec2b504b13a')
+source=("$pkgname-$pkgver.tar.gz::https://github.com/karlstav/cava/releases/download/${pkgver}/${pkgname}-${pkgver}.tar.gz")
+sha512sums=('1f11e3d89465990a026c4cd9e30853967b0ab542b310afe5464f399baec08e769b2bda52d07654eb449adbb66de1a6db721a2cbc90c241193de58b1e12d52259')
 
 build() {
   cd ${pkgname}-${pkgver}
